src/emit/snapshots/hebi__emit__tests__if_stmt.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
if true:
  print a
elif true:
  print b
else:
  print c


# Func:
function `main` (registers: 0, upvalues: 0, length: 20, constants: 7)
  0  | load_true
  1  | jump_if_false 7
  3  | load_global [1]; a
  5  | print
  6  | jump 13
  8  | load_true
  9  | jump_if_false 7
  11 | load_global [4]; b
  13 | print
  14 | jump 5
  16 | load_global [6]; c
  18 | print
  19 | return




