src/emit/snapshots/hebi__emit__tests__loop_continue.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
loop:
  continue


# Func:
function `main` (registers: 0, length: 5, constants: 0)
.code
  0 | jump_loop 0
  2 | jump_loop 2
  4 | return




