src/emit/snapshots/hebi__emit__tests__loop_nested_loop_break.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
loop:
  loop:
    break
  break


# Func:
function `main` (registers: 0, upvalues: 0, length: 9, constants: 2)
  0 | jump 4
  2 | jump_loop 2
  4 | jump 4
  6 | jump_loop 6
  8 | ret




