src/emit/snapshots/hebi__emit__tests__loop_nested_while.snap
---
source: src/emit/tests.rs
expression: snapshot
---
# Input:
loop:
  while true:
    continue
  continue


# Func:
function `test` (registers: 0, upvalues: 0, length: 12, constants: 1)
  0  | load_true
  1  | jump_if_false 6
  3  | jump_loop 3
  5  | jump_loop 5
  7  | jump_loop 7
  9  | jump_loop 9
  11 | ret




